<resources>
    <string name="app_name">MoviedleApp</string>
    <string name="client_id">747713817851-sknc38jco126c6g11aiqjk5otbh1e28k.apps.googleusercontent.com</string>
    //fragments
    <string name="nav_home">Home</string>
    <string name="nav_moviedle">Moviedle</string>
    <string name="nav_profile">Profile</string>
    //Home
    <string name="button_rnd_Movie">Random Movie!</string>
    //moviedle
    <string name="classic_find_movie">Guess today\'s Movie!</string>
    <string name="classic_type_movie">Type any movie to begin!</string>
    <string name="classic_search_movie">Type movie name…</string>
    <string name="place_holder">PLACE_HOLDER</string>
    <string name="movie_not_found"><b> Movie not found</b></string>
    <string name="won"><b>Congratulations! You won! Guessed movie:  </b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_history">Match History</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="achievements">Achievements</string>
    <string name="profile_info">Profile Info</string>
    <string name="sign_out">Sign out</string>
</resources>